[package]
name = "expression-eval-rs"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dev-dependencies]
assert_matches = "1.5.0"
rstest = "0.12.0"